<resources>
    <string name="app_name">FirebaseChallenge</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">LOG IN</string>
    <string name="create_account">Create account</string>
    <string name="remember">Remember</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="name">Name</string>
    <string name="kratos_background_image">Kratos background image</string>
    <string name="type_email">Please type your e-mail</string>
    <string name="type_password">Please type you password</string>
    <string name="add_new_game_button">Add new game button</string>
    <string name="created_at">Created at</string>
    <string name="save_game">save game</string>
    <string name="description">Description</string>
    <string name="seta_para_voltar">Seta para voltar</string>
    <string name="foto_do_game">Foto do game</string>
    <string name="sinopse_mortal_combat">Mortal Kombat é uma série de jogos criados pelo estúdio de Chicago da Midway Games. Em 2011, depois da falência da Midway, a produção de Mortal Kombat foi adquirida pela Warner Bros, tornando-se em seguida na Netherealm. A Warner detém actualmente os direitos da série. A produção do primeiro jogo foi baseada na ideia original que Ed Boon e John Tobias tinham em fazer um jogo em que participasse Jean-Claude Van Damme,[2] mas a ideia foi deixada de parte, e em vez disso foi criado Mortal Kombat, um jogo de luta com temas de fantasia e ciência, lançado em Outubro de 1992.[3] O jogo original, gerou muitas sequelas, vários jogos de acção-aventura, filmes (animados e live-action com a sua sequela) e séries de televisão (animadas e live-action). Outra média inclui banda desenhada, jogo de cartas e a Mortal Kombat: Live Tour, um teatro de artes marciais com personagens da série.</string>
    <string name="insert_game_name">Please insert the name</string>
    <string name="insert_game_launch_date">Please insert the launch date</string>
    <string name="insert_game_description">Please insert the description</string>
    <string name="insert_game_image">Please insert an image for the game</string>
    <string name="image_upload_failure">Image could not be uploaded</string>
    <string name="error_verify_inputs">Please verify your inputs</string>

</resources>