<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".games.view.GameDetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="300dp">

            <ImageView
                android:id="@+id/imgGameView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/foto_do_game"
                android:scaleType="fitXY"
                tools:src="@drawable/splash_screen_wallpaper" />

            <ImageView
                android:id="@+id/imgBackGameDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginTop="18dp"
                android:contentDescription="@string/seta_para_voltar"
                android:src="@drawable/ic_baseline_arrow_back_24" />

            <TextView
                android:id="@+id/txtGameView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="24dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/roboto"
                android:textColor="@color/white"
                android:textSize="28sp"
                android:textStyle="bold" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btnEditGame"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_margin="16dp"
                android:baselineAlignBottom="true"
                android:contentDescription="@string/add_new_game_button"
                android:src="@drawable/ic_baseline_edit_24" />

        </RelativeLayout>

        <TextView
            android:id="@+id/txtGameName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="19dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/roboto"
            android:textColor="@color/card_game_name"
            android:textSize="24sp"
            tools:text="Mortal Combat X" />

        <TextView
            android:id="@+id/txtGameYear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="19dp"
            android:fontFamily="@font/roboto"
            android:textColor="@color/normal_text"
            android:textSize="21sp"
            tools:text="Lançamento: 2018" />


        <TextView
            android:id="@+id/txtGameDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/roboto"
            android:textColor="@color/normal_text"
            android:textSize="21sp"
            tools:text="@string/sinopse_mortal_combat" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>
